--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,6 +1,21 @@
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
 
+# Uncomment the following line to enable the Sofle OLED Display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+
+# Split battery reporting support
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=Y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=Y
+
+# Uncomment these two lines to add support for encoders
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
